--- a/back-end/lunchapp/lunchapp/pom.xml
+++ b/back-end/lunchapp/lunchapp/pom.xml
@@ -59,6 +59,16 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.2.18</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
+            <version>5.3.2</version>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>5.3.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
