--- a/back-end/lunchapp/lunchapp/src/main/resources/application.properties
+++ b/back-end/lunchapp/lunchapp/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.jpa.hibernate.ddl-auto= update
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/lunchapp
 spring.datasource.username=postgres
-spring.datasource.password=25022000magi
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 server.error.whitelabel.enabled=false
